# ReactTest

./: .gitignore  README.md  docker-compose.yml  package.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: config.py  database.py  main.py  routes.py  schemas.py  utils.py
apps/web/: index.html  package.json  tailwind.config.cjs  vite.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/: AppLayout.jsx  SystemStatus.jsx
apps/web/src/lib/: activityStore.js  api.js
apps/web/src/pages/: CertificateViewPage.jsx  CreateCertificatePage.jsx  LogsPage.jsx  VerificationDataPage.jsx  VerifyPage.jsx
scripts/: dev-all.cjs  dev-api.cjs  doctor.cjs  setup-api.cjs  smoke-api.cjs
