[project]
name = "certificate-api"
version = "0.1.0"
description = "FastAPI backend for certificate generator and public verification"
authors = [
  { name = "Codex" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "motor>=3.5.0",
  "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
  "ruff>=0.6.0"
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --reload-dir app --reload-exclude .venv --reload-exclude __pycache__ --host 0.0.0.0 --port 8000"
lint = "ruff check app"
format = "ruff format app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
